--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,11 +7,10 @@
 		<meta name="description" content="Areeta Wong's Personal Website">
 		<meta name="keywords" content="Areeta, areetaw, areetawong">
 
-		<!-- bootstrap -->
+		<!-- style -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        
         <link rel="stylesheet" href="style.css">
 
 		<!-- fonts -->
@@ -88,40 +87,41 @@
 
                 <!-- first row: search engine, ics web crawler, areetawong.com -->
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-xl-4">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">search engine</h5>
                                     <span class="badge badge-pill badge-light">python</span>
                                     <span class="badge badge-pill badge-secondary">flask</span>
                                     <p class="card-text">a search engine built from scratch that is capable of handling 10,000+
-                                    of documents with a query response time under 300ms</p>
+                                        of documents with a query response time under 300ms
+                                    </p>
                                     <h6 class="card-subtitle mb-2 text-muted">built at cs 121 spring 2020</h6>
                                     <a href="https://github.com/areetaw/search-engine" class="btn btn-primary">github repo</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xl-4">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">ics web crawler</h5>
                                     <span class="badge badge-pill badge-light">python</span>
-                                    <p class="card-text">a web crawler that runs through valid domains under the uci cs department
-                                        while maintaining politeness rules to avoid overloading sites with requests
+                                    <p class="card-text">a web crawler that runs through domains under the uci cs department
+                                        while maintaining politeness rules and checking if it is valid
                                     </p>
                                     <h6 class="card-subtitle mb-2 text-muted">built at cs 121 spring 2020</h6>
                                     <a href="https://github.com/areetaw/ics-web-crawler" class="btn btn-primary">github repo</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xl-4">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">personal website</h5>
                                     <span class="badge badge-pill badge-secondary">html</span>
                                     <span class="badge badge-pill badge-dark">css</span>
                                     <span class="badge badge-pill badge-warning">adobe xd</span>
-                                    <p class="card-text">a personal website to showcase social media and act as my little corner on the internet;
+                                    <p class="card-text">a personal website to showcase social media and act as my corner on the internet;
                                         will be adding to it after this summer ends
                                     </p>
                                     <h6 class="card-subtitle mb-2 text-muted">updated may 2020</h6>
@@ -133,22 +133,22 @@
 
                     <!-- second row: reddit android app, dream destination, and maps vr -->
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-xl-4">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">reddit</h5>
                                     <span class="badge badge-pill badge-success">android studio</span>
                                     <span class="badge badge-pill badge-primary">java</span>
                                     <span class="badge badge-pill badge-warning">firebase</span>
-                                    <p class="card-text">a mobile app that mocks the popular site <a class="link" href="https://reddit.com/">reddit</a> 
-                                        with a thread where user can add, search, and delete messeges or sub-messages through database
+                                    <p class="card-text">a mobile app that mocks <a class="link" href="https://reddit.com/">reddit</a> 
+                                        with a thread where user can add, search, and delete messeges or sub-messages through a database
                                     </p>
                                     <h6 class="card-subtitle mb-2 text-muted">built at ics 45j fall 2019</h6>
                                     <a href="https://github.com/areetaw/ics-45j/tree/master/Lab5" class="btn btn-primary">github repo</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xl-4">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">dream destination</h5>
@@ -158,14 +158,14 @@
                                     <span class="badge badge-pill badge-dark">css</span>
                                     <span class="badge badge-info">yelp api</span>
                                     <p class="card-text">a travel web app where users submit a form and get matched 
-                                        with a dream vacation spot along with food/lodging/activities recommendations 
+                                        with a dream vacation spot along with food, lodging, and activities recommendations 
                                     </p>
                                     <h6 class="card-subtitle mb-2 text-muted">built at cssi mtv 2018</h6>
                                     <a href="https://github.com/areetaw/dream-destination" class="btn btn-primary">github repo</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xl-4">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">maps vr</h5>
@@ -174,7 +174,7 @@
                                     <span class="badge badge-pill badge-primary">javascript</span>
                                     <span class="badge badge-danger">a-frame</span>
 
-                                    <p class="card-text">a web application dedicated to help people with physical disabilities navigate the inside of a building
+                                    <p class="card-text">a web app dedicated to help people with physical disabilities navigate the inside of a building
                                         through an immersive virtual reality experience
                                     </p>
                                     <h6 class="card-subtitle mb-2 text-muted"> built at kode with klossy lvl 2 2018</h6>
@@ -189,6 +189,83 @@
 
         <!-- images -->
         <section id="images">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="6"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/google2017.jpg" class="d-block w-100" alt="picture of friend and me at google hq">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>google hq, mountain view, ca</h5>
+                            <p>my first time at the google headquarters campus</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cssi.jpg" class="d-block w-100" alt="cssi class at google hq">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>google hq, mountain view, ca</h5>
+                            <p>cssi 2018 camp</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/banquet.jpg" class="d-block w-100" alt="picture of pi class at banquet 2019">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>orange county mining co., orange county, ca</h5>
+                            <p>theta tau 2019 banquet</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/retreat.jpg" class="d-block w-100" alt="group pic of hack at retreat 2019">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>big bear lake, ca</h5>
+                            <p>hack at uci's very first retreat</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/kqed.jpg" class="d-block w-100" alt="pic of directors at kqed event">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>kqed, san jose, ca</h5>
+                            <p>winning an award for superposition</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/sith.jpg" class="d-block w-100" alt="pic of sith family at banquet 2019">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>orange county mining co., orange county, ca</h5>
+                            <p>my family in theta tau</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/superpos.jpg" class="d-block w-100" alt="pic of directors at superpos 2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>horizons school of technology, san francisco, ca</h5>
+                            <p>lead directors at superposition 2</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/hshacks.jpg" class="d-block w-100" alt="pic of organizers at hshacks 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>42 university, fremont, ca</h5>
+                            <p>organizers at hshacks 3</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </section>
 
         <!-- hobbies -->
@@ -207,5 +284,10 @@
 			</div>
         </section>
 
+        <!-- bootstrap js -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </body>
 </html>
