--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -12,7 +12,12 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="style.css">
-      
+
+      <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaktP7iDnWpZsVwd_tQaQ94DbDSwdKlf0&callback=initMap">
+      </script>
+      <script src="script.js"></script>
+
       <!-- fonts -->
       <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300&display=swap" rel="stylesheet">
         
@@ -60,7 +65,8 @@
       </div>  
     </div>
 
-    <div class="page">
+    <div class="page" onload="createMap();">
+
       <!-- about me -->
       <section id="about">
         <div class="jumbotron text-left" style="color: #000000;">
@@ -314,26 +320,26 @@
               <h2 style="color: #FFFFFF">journey</h2>
             </div>
             <div class="timeline">
-              <div class="container left">
-                <div class="content">
+              <div class="timeline-container left">
+                <div class="timeline-content">
                   <h4>june 2020</h4>
                   <p style="margin-bottom: 0px;">second internship @ google as a step intern</p>
                 </div>
               </div>
-              <div class="container right">
-                <div class="content">
+              <div class="timeline-container right">
+                <div class="timeline-content">
                   <h4>june 2019</h4>
                   <p style="margin-bottom: 0px;">first internship @ amazon as an amzon future engineer sde intern</p>
                 </div>
               </div>
-              <div class="container left">
-                <div class="content">
+              <div class="timeline-container left">
+                <div class="timeline-content">
                   <h4>july 2018</h4>
                   <p style="margin-bottom: 0px;">first time at google @ cssi summer program</p>
                 </div>
               </div>
-              <div class="container right">
-                <div class="content">
+              <div class="timeline-container right">
+                <div class="timeline-content">
                   <h4>june 2016</h4>
                   <p style="margin-bottom: 0px;">first time coding @ girls who code summer immersion program</p>
                 </div>
@@ -343,9 +349,18 @@
         </div>
       </section>
 
+      <!-- travels -->
+      <section id="travels">
+        <div class="jumbotron text-left">
+          <div class="mx-5 mx-xl-5">
+            <div id="map"></div>
+          </div>
+        </div>
+      </section>
+
       <!-- hobbies -->
       <section id="hobbies">
-        <div class="jumbotron text-left" style="color: #000000;">
+        <div class="jumbotron text-left" style="background-color: #898CAE; color: #ffffff;">
           <div class="mx-5 mx-xl-5">
             <div class="row" style="margin-left: 0px">
               <img class="icons" src="images/svg/icons8-plus.svg">           
@@ -380,7 +395,7 @@
 
       <!-- contact me -->
       <section id="contact">
-        <div class="jumbotron text-left" style="background-color: #898CAE; color: #ffffff;">
+        <div class="jumbotron text-left">
           <div class="mx-5 mx-xl-5">
             <div class="row" style="margin-left: 0px">
               <img class="icons" src="images/svg/icons8-edit.svg">           
@@ -413,7 +428,7 @@
       </section>
 
       <!-- footer -->
-      <div class="jumbotron text-center" style="color: #000000;">
+      <div class="jumbotron text-center" style="color: #000000; background-color: #898CAE; color: #ffffff;">
         <p>created with ♡ by areeta wong</p>
         <p>© copyright 2020</p>
       </div>
@@ -423,6 +438,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
   </body>
 </html>
